@@ -36,11 +36,14 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 
-import org.junit.Before;
-import org.junit.Test;
+import java.util.Objects;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
@@ -51,7 +54,6 @@ import static org.mockito.Mockito.when;
 import com.googlecode.jsonrpc4j.HttpException;
 import com.googlecode.jsonrpc4j.JsonRpcClientException;
 import com.googlecode.jsonrpc4j.RequestIDGenerator;
-import kotlin.text.Charsets;
 
 public class BitcoindClientTest {
     private static final String TEST_BLOCK_HASH = "015f37a20d517645a11a6cdd316049f41bc77b4a4057b2dd092114b78147f42c";
@@ -65,9 +67,9 @@ public class BitcoindClientTest {
     private boolean canConnect = true;
     private ByteArrayInputStream mockResponse;
     private ByteArrayInputStream mockErrorResponse;
-    private ByteArrayOutputStream mockOutputStream = new ByteArrayOutputStream();
+    private final ByteArrayOutputStream mockOutputStream = new ByteArrayOutputStream();
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
         var mockURLStreamHandler = mock(MyURLStreamHandler.class);
         var mockRequestIDGenerator = mock(RequestIDGenerator.class);
@@ -108,19 +110,17 @@ public class BitcoindClientTest {
         assertEquals(expectedRequest, mockOutputStream.toString(UTF_8));
     }
 
-    @Test(expected = ConnectException.class)
-    public void testGetBlockCount_noConnection() throws Exception {
+    @Test
+    public void testGetBlockCount_noConnection() {
         canConnect = false;
-
-        client.getBlockCount();
+        assertThrows(ConnectException.class, () -> client.getBlockCount());
     }
 
-    @Test(expected = HttpException.class)
-    public void testGetBlockCount_wrongCredentials() throws Exception {
+    @Test
+    public void testGetBlockCount_wrongCredentials() {
         mockResponseCode = 401;
 //        mockResponseCustomHeaders.put("WWW-Authenticate", "[Basic realm=\"jsonrpc\"]");
-
-        client.getBlockCount();
+        assertThrows(HttpException.class, () -> client.getBlockCount());
     }
 
     @Test
@@ -141,12 +141,13 @@ public class BitcoindClientTest {
         assertEquals(expectedRequest, mockOutputStream.toString(UTF_8));
     }
 
-    @Test(expected = JsonRpcClientException.class)
-    public void testGetBlockHash_heightOutOfRange() throws Exception {
+    @Test
+    public void testGetBlockHash_heightOutOfRange() {
         mockResponseCode = 500;
         mockErrorResponse = toJsonIS("{'result':null,'error':{'code':-8,'message':'Block height out of range'},'id':'123456789'}");
-
-        client.getBlockHash(151);
+        assertThrows(
+                JsonRpcClientException.class, () -> client.getBlockHash(151)
+        );
     }
 
     @Test
@@ -180,21 +181,19 @@ public class BitcoindClientTest {
         assertEquals(expectedRequest, mockOutputStream.toString(UTF_8));
     }
 
-    @Test(expected = JsonRpcClientException.class)
-    public void testGetBlock_blockNotFound() throws Exception {
+    @Test
+    public void testGetBlock_blockNotFound() {
         mockResponseCode = 500;
         mockErrorResponse = toJsonIS("{'result':null,'error':{'code':-5,'message':'Block not found'},'id':'123456789'}");
-
-        client.getBlock(TEST_BLOCK_HASH.replace('f', 'e'), 2);
+        assertThrows(JsonRpcClientException.class, () -> client.getBlock(TEST_BLOCK_HASH.replace('f', 'e'), 2));
     }
 
-    @Test(expected = JsonRpcClientException.class)
-    public void testGetBlock_malformedHash() throws Exception {
+    @Test
+    public void testGetBlock_malformedHash() {
         mockResponseCode = 500;
         mockErrorResponse = toJsonIS("{'result':null,'error':{'code':-8,'message':'blockhash must be of length 64 " +
                 "(not 3, for \\'foo\\')'},'id':'123456789'}");
-
-        client.getBlock("foo", 2);
+        assertThrows(JsonRpcClientException.class, () -> client.getBlock("foo", 2));
     }
 
     @Test
@@ -220,8 +219,8 @@ public class BitcoindClientTest {
 
     private static String readFromResourcesUnPrettified(String resourceName) {
         try {
-            var path = Paths.get(BitcoindClientTest.class.getResource(resourceName).toURI());
-            return new String(Files.readAllBytes(path), Charsets.UTF_8).replaceAll("(\\s+\\B|\\B\\s+|\\v)", "");
+            var path = Paths.get(Objects.requireNonNull(BitcoindClientTest.class.getResource(resourceName)).toURI());
+            return Files.readString(path).replaceAll("(\\s+\\B|\\B\\s+|\\v)", "");
         } catch (Exception e) {
             return "";
         }
